--- a/_posts/2020-04-12-스트라센-알고리즘.md
+++ b/_posts/2020-04-12-스트라센-알고리즘.md
@@ -12,15 +12,43 @@ author: Herjin
 
 
 
-$$A=\begin{bmatrix}
+![matrixgop](https://user-images.githubusercontent.com/63089645/79059401-79582a00-7cb4-11ea-9abd-ac6b0462e5f7.jpg)										           			
 
-a_{0} & a_{1} & a	
+기본적인 행렬의 곱 연산은 위와같이 8번의 곱셈과 4번의 덧셈으로 이루어져있는데 컴퓨터는 곱셈을 할때 시간복잡도가 크게 증가하므로 곱셈을 줄이고 덧셈을 늘린 방식이 1960년대 후반 스트라센 이 고안한 스트라센 알고리즘 입니다.
 
-a_{3} & a_{4} & a_{5}\\			     		    
 
-\end{bmatrix} 
 
-$$											           			
+### 스트라센 알고리즘
 
-기본적인 행렬의 곱 연산은 위와같이 8번의 곱셈과 4번의 덧셈으로 이루어져 시간복잡도는 O(n^{3}) 이 됩니다.
+먼저 C 행렬을 표현하기 위한  M 행렬을 만듭니다.
+
+![2735784D53F4468D1E](https://user-images.githubusercontent.com/63089645/79059535-1cf60a00-7cb6-11ea-9ab6-aa5e1e594048.png)
+
+![2](C:\Users\나\Desktop\2.png)
+
+![3](C:\Users\나\Desktop\3.png)
+
+![4](C:\Users\나\Desktop\4.png)
+
+![5](C:\Users\나\Desktop\5.png)
+
+![6](C:\Users\나\Desktop\6.png)
+
+![7](C:\Users\나\Desktop\7.png)
+
+그리고 C 행렬을 M행렬로 표현하면 아래와 같이됩니다.
+
+![1-1](C:\Users\나\Desktop\1-1.png)
+
+![1-2](C:\Users\나\Desktop\1-2.png)
+
+![1-3](C:\Users\나\Desktop\1-3.png)
+
+![1.4](C:\Users\나\Desktop\1.4.png)
+
+이 방법은 곱연산이 7번, 합연산이 18번 사용됩니다.
+
+### 하지만
+
+실제로는 재귀함수를 돌려 시간이 오래걸릴 뿐더러 M<sub>1</sub> ~ M<sub>7</sub>을 담아둘 자리를 기억장치에 마련해야 하므로 행렬이 클 경우 자리를 많이 차지하여 스트라센 알고리즘이 행렬의 곱 연산보다 빠르기 위해서는 매우 큰 n이 필요하여 슈퍼컴퓨터로 처리해야할 정도로 n 이 큰 경우가 아닌이상 많이 쓰이지는 않는 알고리즘입니다.
 
